0.6.0

- Added custom tacking icons (if some is missing please tell uns the ID and type)
- Make tooltip moveable
- Small fixes
- If petbar is locked, the bar is now moving up and down with the left multibar if this one is fading in and out
- The buffbar is now moving up and down with the right multibar if this one is fading in and out
- Add custom hunter happiness (portrait frame background)

0.5.0

- Fix druid combobar (Cat)
- Added target castbars (Blizzard removed the ability to distinguish between spell ranks in the combat log, so cast times are always based on the highest rank; No ability to detect if a cast was canceled, so the castbar runs to the end)

0.4.0

- Added AuraDurationClassic
- Added bank frame
- Petframe can now be moved
- Pet happiness now only visible for hunters
- Fix some lua errors
- Fix some bugs in raidframes
- Added combopoints for druids
- If a class has only one Stanceicon, it will be showen instead of the "Sweap-Button"
- Added temp weapon enchants as buff