@@ -6,6 +6,8 @@
 - If petbar is locked, the bar is now moving up and down with the left multibar if this one is fading in and out
 - The buffbar is now moving up and down with the right multibar if this one is fading in and out
 - Add custom hunter happiness (portrait frame background)
+- Fix MultiBarRight and MultiBarLeft was not scale after reload
+- Add custom border to stancebutton and make then smaller
 
 0.5.0
 
